--- a/caseStudyWP/09-appendixsamSim.Rmd
+++ b/caseStudyWP/09-appendixsamSim.Rmd
@@ -1,79 +1,45 @@
 <!-- The following code should appear at the beginning of the first appendix.
-After that, all subsequent sections will be turned into appendices. -->
+After that, all subsequent sections will be turned into appendices.
+bookdown::render_book("index.Rmd")
+
+ -->
 
 
 # SamSim MODEL DOCUMENTATION {#app:third-appendix}
 
 SamSim is the closed loop simulation modelling tool used for calculation of the projection based LRPs. An overview of SamSim and the code can be found in project [github page](https://github.com/Pacific-salmon-assess/samSim/tree/LRP). Samsim includes two population levels, it could be applied to one Conservation Unit (CU) with component sites, or one Stock Management Unit (SMU) with component CUs, OR even one region with component SMUs. For the LRP analysis two SMUs were used as Study cases: the West Coast of Vancouver Island (WCVI) Chinook SMU (with five CUs) and the Interior Fraser Coho Salmon SMU (with three CUs). This appendix describes the samSim model equations relevant to these study cases. 
-The simulation model has two main phases: Model Priming and Projections. The model priming phase recreates data for past years, either by populating objects with observed data or by generating data based on input parameters. The projection phase generates data for future years based on the user defined scenarios and management procedures.  Four primary time-series are populated in this simulation model: Spawners $S_{y,k}$, Recruitment $R_{y,k}$, Catch $C_{y,k,i}$ and exploitation rate $ER_{y,k,i}$. The model indexes and quantities are defined in Table \@ref(tab:modvar) and input parameters used for the study cases are listed in Table \@ref(tab:parval). Detailed definitions of the input data and parameters are provided in the project [README](https://github.com/Pacific-salmon-assess/samSim/tree/LRP#readme). 
+The simulation model has two main phases: Model Priming and Projections. The model priming phase recreates data for past years, either by populating objects with observed data or by generating data based on input parameters. The projection phase generates data for future years based on the user defined scenarios and management procedures.  Four primary time-series are populated in this simulation model: Spawners $S_{y,k}$, Recruitment $R_{y,k}$, Catch $C_{y,k,i}$ and exploitation rate $ER_{y,k,i}$. The model indexes,parameters and quantities are defined in Table \@ref(tab:modvar). Detailed definitions of the input data and parameters are provided in the project [README](https://github.com/Pacific-salmon-assess/samSim/tree/LRP#readme). 
 
 
 
 <!-- These tables are being updated in the samSimparamtabs.tex local file. It is easier to flip between files than scrolling up and down in the document
 
 
-\begin{table}[ht]
-\caption{List of samSim model indexes and variables.}
-\begin{tabular}{ll}
-\hline
-Notation & definition \\ 
-\hline
-$y$ & year \\ 
-$j$ & age \\
-$k$ & Conservation Unit (CU)\\
-$MU$ & Management unit - aggregates of CUs\\
-$i$ & Fishery: U.S. or Canada \\
-$S_{y,k}$ & Spawners \\
-$\alpha_{k}$ & Ricker productivity parameter\\
-$\beta_{k}$ & Ricker carrying capacity inverse\\ 
-$RY_{y,k}$ & Calendar Year Recruits \\
-$Ra_{y,k,j}$ & Age specific brood year Recruits \\
-$R_{y,k}$ & Total brood year Recruits \\
-$w_{y,k}$ & Recruitment deviates with temporal auto-correlation\\
-$v_{y,k}$ & Recruitment deviations\\
-$covMat$ & variance-covariance kxk matrix to generate recruitment deviates with CU autocorrelation\\
-$\sigma_{k}$ & Recruitment standard deviation\\
-$Surv_{y,j}$ & Survival covariate \\
-$SurvCY_{y,j}$ & Survival covariate associated with calendar year \\
-$v_{y,k}$ & Recruitment deviates \\
-$S_{eq}$ & Equilibrium Spawners \\
-$Smsy_{y,k}$ & Spawners that produce the maximum sustainable yield \\
-$Sgen_{y,k}$ & Number of spawners required to recover to Smsy in one generation in the absence of fishing \\
-$fRY_{y,k}$ & Forecast of calendar year recruitment \\
-$\omega$ & Forecast random error deviates \\
-$TAC_{y,k,i} & Total allowable catch for each year, CU and country\\
-$ER_{y,k,i}$ & CU-specific exploitation rate \\
-$o_{k}$ & shape parameter for CU-specific exploitation rate variability \\
-$u_{k}$ & shape parameter for CU-specific exploitation rate variability \\
-$\varphi_{k}$ & standard deviation for CU-specific exploitation rate variability \\
-$\phi_{k}$ & CV for CU-specific exploitation rate variability \\
-$ERagg_{y,i}$ & Exploitation rate for MU aggregate 
-$d$ & shape parameter for aggregate exploitation rate variability \\
-$e$ & shape parameter for aggregate exploitation rate variability \\
-$\theta_{i}$ & aggregate average exploitation rate for each nation\\
-$\vartheta$ & standard deviation for aggregate exploitation rate variability \\
-$CVER$ & CV for aggregate exploitation rate variability \\
-$mixTAC_{y,k}$ & Total allowable catch fo Canadian mixed stock fisheries \\
-$singleTAC_{y,k}$ & Total allowable catch fo Canadian single stock fisheries \\
-$\psi$ & Proportion of the catch taken in mixed stock fisheries \\
-$pCU_{y,k}$ & Proportion of each CU in calendar year recruitment \\
-\hline
-(\#tab:modvar)
-\end{tabular}
-\end{table}
 -->
 
+```{r paramtab, tab.cap="List of samSim model indexes and variables", warning=FALSE, echo=FALSE, fig.align="center"}
 
+x <- rbind(
+c("$$y$$" , "year"),
+c("$$j$$" , "age" ),
+c("$$k$$" , "Conservation Unit (CU)"),
+c("$$i$$" , "Nation" ),
+c("$$S_{y,k}$$" , "Spawners" ),
+c("$$Sgen_{y,k}$$", "Number of spawners required to recover to $Smsy_{k}$ in one generation in the absence of fishing")
+  )
+x<-as.data.frame(x,col.names = c("Notation","Definition"))
+names(x)<-c("Notation","Definition")
+csasdown::csas_table(x)
+```
+<!--
 \begin{table}[ht]
 \caption{List of samSim model indexes and variables.}
-\begin{tabular}{ll}
+\begin{tabular}{l l}
 \hline
 Notation & definition \\ 
-\hline
 $y$ & year \\ 
 $j$ & age \\
 $k$ & Conservation Unit (CU)\\
-$MU$ & Management unit - aggregates of CUs\\
 $i$ & Fishery: U.S. or Canada \\
 $S_{y,k}$ & Spawners \\
 $\alpha_{k}$ & Ricker productivity parameter\\
@@ -89,10 +55,36 @@ $Surv_{y,j}$ & Survival covariate \\
 $SurvCY_{y,j}$ & Survival covariate associated with calendar year \\
 $v_{y,k}$ & Recruitment deviates \\
 $S_{eq}$ & Equilibrium Spawners \\
-\hline
-(\#tab:modvar)
+$Smsy_{y,k}$ & Spawners that produce the maximum sustainable yield \\
+$Sgen_{y,k}$ & Number of spawners required to recover to $Smsy_{k}$ in one generation in the absence of fishing \\
+$fRY_{y,k}$ & Forecast of calendar year recruitment \\
+$\omega$ & Forecast random error deviates \\
+$TAC_{y,k,i}$ & Total allowable catch for each year, CU and country\\
+$ER_{y,k,i}$ & CU-specific exploitation rate \\
+$o_{k}$ & location parameter for CU-specific exploitation rate variability \\
+$u_{k}$ & shape parameter for CU-specific exploitation rate variability \\
+$\varphi_{k}$ & standard deviation for CU-specific exploitation rate variability \\
+$\phi_{k}$ & CV for CU-specific exploitation rate variability \\
+$ERagg_{y,i}$ & Exploitation rate for MU aggregate \\
+$d$ & shape parameter for aggregate exploitation rate variability \\
+$e$ & shape parameter for aggregate exploitation rate variability \\
+$\theta_{i}$ & aggregate average exploitation rate for each nation\\
+$\vartheta$ & standard deviation for aggregate exploitation rate variability \\
+$CV\theta$ & CV for aggregate exploitation rate variability \\
+$mixTAC_{y,k}$ & Total allowable catch fo Canadian mixed stock fisheries \\
+$singleTAC_{y,k}$ & Total allowable catch fo Canadian single stock fisheries \\
+$\psi$ & Proportion of the catch taken in mixed stock fisheries \\
+$pCU_{y,k}$ & Proportion of each CU in calendar year recruitment \\
+$\zeta_{k}$ & Realized exploitation rates before inclusion of Beta error \\
+$tER_{k}$ & Realized exploitation rates before inclusion of Beta error \\
+$l_{k}$ & shape parameter for introducing variability in realized exploitation rates \\
+$s_{k}$ & shape parameter for introducing variability in realized exploitation rates \\
+$\sigma_C$ & standard deviation for realized exploitation rate variability \\
 \end{tabular}
+(\#tab:modvar)
 \end{table}
+-->
+
 
 
 The following sections in this appendix are organized similarly to the samSim code, that way the subheadings can be read as pseudo code.  
@@ -103,23 +95,23 @@ The following sections in this appendix are organized similarly to the samSim co
 
 The priming phase, or model initialization, represents the past data for CUs being modeled. It is used to represent real and observed abundances before starting the projection trials. This phase loops over a number of past years ('nPrime') and reconstructs recruitment time series for past years. The simulations can be initialized in two ways: with existing recruitment data or with user defined parameters, if recruitment data is not available.  
 
-#### If Recruitment Data is available
+#### Recruitment Data is available
 
 If spawner-recruitment data is available, the number of initialization years 'nPrime' is defined based on the length of the longest CU time series available. The Spawners, Recruits, Catch and Exploitation Rate objects are populated with the input data. If catch and/or exploitation rate data are not available, those values are set to zero.
 
 
-#### If Recruitment Data is not available
+#### Recruitment Data is not available
 
 
 
 When Recruitment data is not available, the 'nPrime' is set to 10 times the maximum age of recruits. Because the stock recruitment data is not available, the first step on this routine is to retrieve the stock recruitment parameters. The user has the option of providing either fixed values or a set of mcmc samples. If mcmc samples are provided, one set of parameters is used for each simulation trial.
 
-The next step in the simulation is to adjust the spawner recruitment parameters according to the user defined scenarios. samSim includes options to adjust the recruitment standard deviations, $\sigma_{k}$,  and the productivity parameter, $\alpha_{k}$. The LRP case studies do not include adjustments or changes in productivity over time, therefore we will not describe the productivity adjustments in this report. 
+The next step in the simulation is to adjust the spawner recruitment parameters according to the user defined scenarios. samSim includes options to adjust the recruitment standard deviations, $\sigma_{k}$, and the productivity parameter, $\alpha_{k}$. The LRP case studies do not include adjustments or changes in productivity over time, therefore we will not describe the productivity adjustments in this report. 
 
 Recruitment is assumed to be correlated between the CU's, the correlation matrix is calculated based on the $\sigma_{k}$ parameters, and the correlation among CUs in recruitment deviations specified by the user.   
  
 
-Once parameters are defined the number of spawners, $S_{y,k}$, is initialized. When no recruitment data is provided, $S_{y,k}$ is set at equilibrium for the first 6 years and then calculated based on recruitment  and exploitation rates in the previous years (equation \@ref(eq:Seqinit)). If the calculated number of spawners is lower than the user inputted extinction threshold, then the number of spawners is set o zero. Recruitment error is given by a multivariate normal disribution reflecting the recruitment covariance among CUs. 
+Once parameters are defined the number of spawners, $S_{y,k}$, is initialized. When no recruitment data is provided, $S_{y,k}$ is set at equilibrium for the first 6 years and then calculated based on recruitment  and exploitation rates in the previous years (equation \@ref(eq:Seqinit)). If the calculated number of spawners is lower than the user inputted extinction threshold, then the number of spawners is set o zero. Recruitment error is given by a multivariate normal distribution reflecting the recruitment covariance among CUs. 
 
 \begin{align}
   S_{y<=6,k} &= \frac{\alpha_{k}}{\beta_{k}} \\
@@ -131,7 +123,7 @@ Once parameters are defined the number of spawners, $S_{y,k}$, is initialized. W
 The age structure of the population is then calculated based on the mean age structure for each CU given by the user and random variability following a multivariate logistic error structure (@schnute_influence_1995). The age structure error can vary or be held constant among CUs. 
 
 
-The following step is to compute recruitment following the recruitment curve specified by the user. For the LRP version of samSim, three versions of the recruitment curve are available: A simple Ricker curve (equation \@ref(eq:Rickersimple) with $\rho = 0$), Ricker curve with temporal autocorrelation in recruitment error (equation \@ref(eq:Rickersimple)), and Ricker curve with freshwater survival covariate (equation \@ref(eq:Rickersurv)). Recruitment error is assumed to be correlated among CUs for all versions of the Ricker curve. Random recruitment deviates can be generated with multivariate t or multivariate normal distributions, that can be symmetric or skewed. The study cases used in this report all assume that recruitment deviates come from a symmetrical multivariate normal distribution (equation \@ref(eq:CUautocorr)). 
+The following step is to compute recruitment following the recruitment curve specified by the user. For the LRP version of samSim, three versions of the recruitment curve are available: A simple Ricker curve (equation \@ref(eq:Rickersimple) with $\rho = 0$), Ricker curve with temporal autocorrelation in recruitment error (equation \@ref(eq:Rickersimple)), and Ricker curve with freshwater survival covariate (equation \@ref(eq:Rickersurv)). Recruitment error is assumed to be correlated among CUs for all versions of the Ricker curve. Random recruitment deviates can be generated with multivariate t or multivariate normal distributions, that can be symmetric or skewed. The study cases used in this report all assume that recruitment deviates come from a symmetrical multivariate normal distribution (Equation \@ref(eq:CUautocorr)). 
 
 \begin{align}
   R_{y,k} &= S_{y,k} \cdot e^{\alpha{k} - \beta{k} \cdot S_{y,k} + w_{y,k} - \frac{\sigma_{k}^{2}}{2}}\\
@@ -141,21 +133,22 @@ The following step is to compute recruitment following the recruitment curve spe
 \end{align}
 
 \begin{align}
+  v_{y,k} \sim N(\mu=0,covMat)
+  (\#eq:CUautocorr)
+\end{align}
+
+
+\begin{align}
   Ra_{y,k,j} &= ppn_{j} \cdot S \cdot e^{\alpha{k} - \beta{k} \cdot S + \gamma_{k} \cdot Surv_{y,j} + v_{y,k} - \frac{\sigma_{k}^{2}}{2}}\\
   R_{y,k} &= \sum^{j}Ra_{y,k,j}
   (\#eq:Rickersurv)
-\end{align}
-
-\begin{align}
-  v_{y,k} \sim N(\mu=0,covMat)
-  (\#eq:CUautocorr)
 \end{align}
 
 
 For the Ricker model with the survival covariate, the covariates for each calendar year are generated following a normal distribution with user defined mean and variance (Equation \@ref(eq:survCY)). The distribution of survival covariates is truncated between maximum and minimum values provided by the user.  The brood year survival covariates, $Surv_{y,j}$, are currently populated following the dominant life history types from Interior Fraser Coho. For that stock, fish with a 3-year life cycle differ from those with a 4-year life cycle in the number of years spent in freshwater as juveniles, i.e., 18 months vs 30 months; both life cycles spend 18 months at sea before returning to spawn. Fish with a 2-year life cycle spend 18 months in the freshwater environment and only 6 months at sea before returning as jacks. This life history results in the survival covariate being lagged by one year for ages 2 and 3 (Figure \@ref(fig:cohosurvivaldiagram) and Equation \@ref(eq:surv)). The exception is the first two years of the priming loop, when no lag is applied to the covariates.
  
 \begin{align}
-  SurvCY_{y} = wSurv_{y} - \frac{{\sigma_{Surv}}^2}{2})\\
+  SurvCY_{y} &= wSurv_{y} - \frac{{\sigma_{Surv}}^2}{2}\\
   wSurv_{y} &\sim N(\mu_{Surv},\sigma_{Surv})
   (\#eq:survCY)
 \end{align}
@@ -186,9 +179,9 @@ Recruitment estimates produced for either formulation of the Ricker model are ca
 
 #### Management benchmarks
 
-In the priming loop, the management benchmarks are only calculated in the last two generations, i.e. if $y<nPrime-2*gen$. The management benchmarks are calculated according to three options: "stockRecruit", "percentile" and "habitat". For all three options, lower and upper benchmarks are calculated.
+In the priming loop, the management benchmarks are only calculated in the last two generations, i.e. if $y<nPrime-2*gen$. The management benchmarks are calculated according to three options: "stockRecruit", "percentile" and "habitat". For all three options, lower and upper benchmarks are calculated. All management benchmarks are denoted with the time index, $y$, because samSim has the capability of estimating management benchmarks on a yearly basis, relying on the data obtained from the beginning of the time series to the current simulation year. However for the purpose of the LRP study cases, time invariant management benchmarks were used. <-- based on the priming? phase need to check
 
- If the "stockRecruit" option is used with the Ricker recruitment functions, then the lower benchmark is set to  $Sgen_{k}$ and the upper benchmark is set to 80\% of $Smsy_{k}$. When the model with the survival covariate is used, the $\alpha$ parameter is modified to incorporate the survival component (Equation \@ref(eq:alphamb)). In order to keep the management benchmarks constant through time, the long term average of  the survival covariate,  $\mu_{Surv}$, is used. $Smsy_{k}$ is calculated following the explicit solution provided by @scheuerell_explicit_2016 using the Lambert W function (Equation  \@ref(eq:smsysamsim)). $S_{gen}$ is estimated by solving Equation \@ref(eq:Sgensamsim) numerically, as described by @holt_indicators_2009. 
+ If the "stockRecruit" option is used with the Ricker recruitment functions, then the lower benchmark is set to  $Sgen_{y,k}$ and the upper benchmark is set to 80\% of $Smsy_{y,k}$. When the model with the survival covariate is used, the $\alpha$ parameter is modified to incorporate the survival component (Equation \@ref(eq:alphamb)). In order to keep the management benchmarks constant through time, the long term average of  the survival covariate,  $\mu_{Surv}$, is used. $Smsy_{y,k}$ is calculated following the explicit solution provided by @scheuerell_explicit_2016 using the Lambert W function (Equation  \@ref(eq:smsysamsim)). $Sgen_{y,k}$ is estimated by solving Equation \@ref(eq:Sgensamsim) numerically, as described by @holt_indicators_2009. 
 
 
 \begin{align}
@@ -224,17 +217,17 @@ In the priming phase, all observations are set equal to the true simulation valu
 
 The model projection phase is used to represent future potential outcomes. The steps in this phase will depend on the scenarios and management procedures are implemented selected by the user, and therefore will vary depending on the model application. In this report, we list all steps in the order they appear in the code and indicate in the text if the step was used for the LRP case studies. The following description follows the order of the code implementation, therefore the subheadings in this section could be seen as pseudo code. The projections run for each trial from year `nPrime + 1` to `nYears`, the latter being the number of projection years defined by the user. 
 
-#### Population Dynamics submodel
 
-##### Specify Stock recruitment parameters
+
+#### Specify Stock recruitment parameters
 
 Similarly to the priming phase, the first step on the projection loop is to define the stock recruitment parameters. The $\beta$ and $\sigma$ parameters are considered fixed and were already defined in the priming phase. However, if the user specifies productivity changes through time, then the productivity parameter $\alpha{y,k}$ is adjusted every year following a linear trend. A detailed description of the algorithm used to generate productivity trends is out of the scope of this report as the study cases do not include scenarios with productivity changes. As the productivity parameter is held constant in the study cases, we will continue to use the time-invariant notation ($\alpha_{k}$) for the parameter in the sections to follow. 
 
-##### Specify Management benchmarks
+#### Specify Management benchmarks
 
-Once $\alpha_{k}$ is specified, the management quantities $Smsy_{y,k}$ and $Sgen_{y,k}$ for the projection year are computed following Equations \@ref(eq:smsysamsim) and \@ref(eq:Sgensamsim). The management benchmarks can be re-estimated every year or set by the normative period, i.e., last year of the priming phase, `nPrime`. The study cases in this report use the normative period management benchmarks. 
+Once $\alpha_{k}$ is specified, the true management quantities $Smsy_{y,k}$ and $Sgen_{y,k}$ for the projection year are computed following Equations \@ref(eq:smsysamsim) and \@ref(eq:Sgensamsim). The management benchmarks can be re-estimated every year or set by the normative period, i.e., last year of the priming phase, `nPrime`. The study cases in this report use the normative period management benchmarks. 
  
-#### Observation submodel - previous years of abundance
+#### Observation submodel - returns at age
 
 In this step, observation error is added to the proportion of returns at age for each brood year. The observation error for the proportions at age is given by a multivariate logistic error structure as described by @schnute_influence_1995. Observation error for the proportions of returns at age is not included in the study cases described in this report. 
 
@@ -253,7 +246,7 @@ The observed recruitment by brood year is retrieved by multiplying the true recr
 
 
 \begin{align}
-  obsR_{y,k} &= \sum^j RY_{y+j,k} \cdot obsppn_{y+j,k,j}
+  obsR_{y,k} &= \sum^j (RY_{y+j,k} \cdot obsppn_{y+j,k,j})
   (\#eq:obsR)
 \end{align}
 
@@ -276,25 +269,25 @@ In this step, the population forecast, total allowable catch, realized catches a
 The recruitment forecast and true recruitment are then aggregated at the management unit level (Equation \@ref(eq:MUagg)) and 
 
 \begin{align}
-  RY_{y,MU} &= \sum^{k \in MU} RY_{y,k}\\
-  fRY_{y,MU} &= \sum^{k \in MU} fRY_{y,k}
+  aggRY_{y} &= \sum^{k} RY_{y,k}\\
+  aggfRY_{y} &= \sum^{k} fRY_{y,k}
   (\#eq:MUagg)
 \end{align}
 
-The next step is to calculate the allowable catch following a harvest control rule. Both study cases in this report use the fixed exploitation rate harvest control rule. In this option, the allowable catch is the product of fixed exploitation rates and calendar year recruits (Equation  \@ref(eq:tac)). The baseline fixed exploitation rates for Canada and the USA are defined in the input files. Currently, only Canadian exploitation rates have added variability implemented through draws from beta distributions (Equation \@ref(eq:ER) and \@ref(eq:CanERCU)). Two layers of variability are considered:  error with common mean and CVs for all CUs and error with CU-specific CVs. In the first layer, an exploitation rate value is drawn from a beta distribution with mean and CV defined by the user. In the second layer, CU-specific exploitation rates are drawn from a beta distribution using the output exploitation rate from the first layer as mean and CU-specific CV defined in the input files. The mean and CVs are transformed into shape and location parameters for the beta distribution draws (Equations \@ref(eq:ouERCU1)-\@ref(eq:ouERCU) and \@ref(eq:deER1)-\@ref(eq:deER)).
+The next step is to calculate the allowable catch following a harvest control rule. Both study cases in this report use the fixed exploitation rate harvest control rule. In this option, the allowable catch is the product of fixed exploitation rates and calendar year recruits (Equation  \@ref(eq:tac)). The baseline fixed exploitation rates for Canada and the USA are defined in the input files. Currently, only Canadian exploitation rates have added variability implemented through draws from beta distributions (Equation \@ref(eq:ER) and \@ref(eq:CanER)). Two layers of variability are considered:  error with common mean and CVs for all CUs and error with CU-specific CVs. In the first layer, an exploitation rate value is drawn from a beta distribution with mean and CV defined by the user. In the second layer, CU-specific exploitation rates are drawn from a beta distribution using the output exploitation rate from the first layer as mean and CU-specific CV defined in the input files. The mean and CVs are transformed into shape and location parameters for the beta distribution draws (Equations \@ref(eq:ouERCU1)-\@ref(eq:ouERCU) and \@ref(eq:deER1)-\@ref(eq:deER)).
 
  
 \begin{align}
-  TAC_{y,k,i} &= ER_{y,k,i} \cdot RY_{y,MU}
+  tTAC_{k,i} &= tER_{k,i} \cdot aggRY_{y}
   (\#eq:tac)
 \end{align}
 
 
 \begin{align}
-ER_{y,k,i} &=
+tER_{k,i} &
 \begin{cases}
  \sim Beta(o_{k},u_{k}) & \text{i=Canada} \\
- \theta_{i}  & \text{i=U.S.}
+ =\theta_{i}  & \text{i=U.S.}
 \end{cases}  
   (\#eq:ER)
 \end{align}
@@ -318,102 +311,110 @@ ERagg_{y,i}  \sim Beta(d,e)
 (\#eq:deER1)
    d &= {\theta_{i}}^2 \cdot (\frac{1-\theta_{i}}{\vartheta^{2}}-\frac{1}{\theta_{i}})\\
    e &= d \cdot \frac{1}{\theta_{i}-1}\\ 
-   \vartheta &= CVER \cdot \theta_{i}  
+   \vartheta &= CV_{\theta} \cdot \theta_{i}  
   (\#eq:deER)
 \end{align}
 
 
-The TAC for Canada is further divided in two components, mixed stock fishery and single stock fisheries (Equations \@ref(eq:tacmix) and \@ref(eq:tacsingle)). Once all TACs are calculated, they are adjusted by the proportions of each CU (Equations \@ref(eq:cuppn) and \@ref(eq:tacadj)).
+The TAC for Canada is further divided in two components, mixed stock fishery and single stock fisheries (Equations \@ref(eq:tacmix) and \@ref(eq:tacsingle)). Once all TACs are calculated, the temporary value $tTAC_{y,k,i}$ is adjusted to CU-specific abundances (Equations \@ref(eq:cuppn) - \@ref(eq:tacadj)).
 
 
 
 \begin{align}
 (\#eq:tacmix)
-  mixTAC_{y,k} &=  TAC_{y,k,i=Can} \cdot \psi_{y,k} \\
-  singleTAC_{y,k} &= TAC_{y,k,i=Can} \cdot (1- \psi)
+  tmixTAC_{y,k} &=  tTAC_{y,k,i=Can} \cdot \psi_{y,k} \\
+  tsingleTAC_{y,k} &= tTAC_{y,k,i=Can} \cdot (1- \psi)
   (\#eq:tacsingle)
 \end{align}
 
 
 \begin{align}
 (\#eq:cuppn)
-  pCU_{y,k} &= RY_{y,k}/ \sum^{k}RY_{y,k}
-  TAC_{y,k,i} &= TAC_{y,k,i} \cdot pCU_{y,k}\\
-  mixTAC_{y,k} &= mixTAC_{y,k}  \cdot pCU_{y,k}\\
-  singleTAC_{y,k} &=  singleTAC_{y,k} \cdot pCU_{y,k}
+  pCU_{y,k} &= RY_{y,k}/ \sum^{k}RY_{y,k}\\
+  TAC_{y,k,i} &= tTAC_{y,k,i} \cdot pCU_{y,k}\\
+  mixTAC_{y,k} &= tmixTAC_{y,k}  \cdot pCU_{y,k}\\
+  singleTAC_{y,k} &=  tsingleTAC_{y,k} \cdot pCU_{y,k}
   (\#eq:tacadj)
+\end{align}
+
+
+
+
+
+Once the allowable catches are defined, the realized catches are computed. The realized catches include an additional layer of uncertainty representing the implementation error. Catch uncertainty is often easier to parameterize using observed deviations in target and realized exploitation rates rather than catches. Therefore, the target total allowable catches are back-converted to exploitation rates \@ref(eq:muER) and realized catches are generated using beta distributed error around those exploitation rates. When computing the temporary exploitation rates, the catches are removed sequentially following the order U.S. fisheries, Canadian mixed stock, and Canadian single stock fishery \@ref(eq:muER). The LRP study cases only considered mixed stock fisheries, therefore the catches for the two other categories were set to zero. 
+
+\begin{align}
+\zeta_{k} &=
+\begin{cases}
+ &\frac{TAC_{y,k,i=U.S}}{RY_{y,k}} & \text{i=U.S.} \\
+ &\frac{mixTAC_{y,k}}{RY_{y,k}-TAC_{y,k,i=U.S.}} & \text{i=U.S.} \\
+ &\frac{singleTAC_{y,k}}{RY_{y,k}-TAC_{y,k,i=U.S.}-mixTAC_{y,k}} & \text{i=U.S.} \\
+\end{cases} 
+  (\#eq:muER)
 \end{align}
 
 <!--
 
-Finally, the CU specific TACs are calculated by multiplying the SMU  
-
-
 \begin{align}
-  cuppn{y,k} &= RY_{y,k}/ \sum^{k}RY_{y,k}
-  CanTAC_{y,k} &= CanTAC_{y,k} \cdot cuppn_{y,k}\\  
-  (\#eq:tac)
-\end{align}
-
-
-need to describe everything above into amTAC, Can mixTAC and cansingtac, need to figure out the dimensions of the catch
--->
-
-Once the allowable catches are defined, the realized catches are computed. Catch  uncertainty is often easier to parameterize using observed deviations in target and realized exploitation rates rather than catches. Therefore, the target total allowable catches are back-converted to exploitation rates and realized catches are generated using  beta distributed error around the exploitation rates. 
-
-\begin{align}
-  Catch_{y,k} &= tempER * RY_{y,k} \\
-  tempER &\sim Beta(location_{k},shape_{k})\\
-  location_{k} &=  {TAC_{y,k}}^2 \cdot (\frac{1 - mu}{\sigma_TAC^2} - \frac{1}{TAC_{y,k}})\\
-  shape_{k} &= location_{k} \cdot \frac{1}{TAC_{y,k} - 1}
+  C_{y,k} &= tER_{k} \cdot RY_{y,k} \\
+  tER_{k} &\sim Beta(l_{k},s_{k})\\
+  l_{k} &=  {\zeta_{k}}^2 \cdot (\frac{1 - \zeta_{k}}{\sigma_C^2} - \frac{1}{\zeta_{k}})\\
+  s_{k} &= l_{k} \cdot \frac{1}{\zeta_{k} - 1}
   (\#eq:realcatch)
 \end{align}
 
-The final step of this phase is to compute the Spawners and the exploitation rate Equations \@ref(eq:spawners)
 
+The next step is to compute the number of Spawners and exploitation rate (Equations \@ref(eq:spawners) and \@ref(eq:ER))
+
+  
 \begin{align}
+  (\#eq:spawners)
   S_{y,k} &= RY_{y,k} \cdot(1-ER_{y,k}) \\
   ER_{y,k} &= \frac{\sum^i TAC_{y,k,i}}{RY_{y,k}}
-  (\#eq:spawners)
+  (\#eq:ER)
 \end{align}
 
-#### Second Observation submodel -current year
 
-In this step, observation error is added to the quantities calcualted in the current time step. Catch observation error is given by a log normal distribution truncated between the 0.0001, 0.9999 quantiles. If the catch is taken in a mixed stock fishery, an additional multivariate logistic error is incorporated to
-account for uncertainty in the stock assignment process. Spawners observation error is also given by a log normal distribution truncated between the 0.0001, 0.9999 quantiles.
+  -->
+
+#### Current year Observation submodel 
+
+In this step, observation error is added to the quantities calculated in the current time step. Catch observation error is given by a log normal distribution truncated between the 0.0001, 0.9999 quantiles. If the catch is taken in a mixed stock fishery, an additional multivariate logistic error is incorporated to account for uncertainty in the stock assignment process. Observed Spawner is given by a log normal distribution truncated between the 0.0001, 0.9999 quantiles.
 
 
 \begin{align}
   obsC_{y,k,i} &= C_{y,k,i} \cdot o_{y,k,i}\\
-  o_{y,k,i} \sim logN(0,\sigma_{C},0.0001,0.9999)
+  o_{y,k,i} \sim logN(0,\sigma_{C})
   (\#eq:obsC)
 \end{align}
 
 \begin{align}
   obsS_{y,k} &= S_{y,k} \cdot  \cdot u_{y,k,i}\\
-  u_{y,k,i} \sim logN(0,\sigma_{S},0.0001,0.9999)
+  u_{y,k,i} \sim logN(0,\sigma_{S})
   (\#eq:obsS)
 \end{align}
 
 Observed recruitment is set to the sum of observed spawners and catches
 \begin{align}
-  obsRY_{y,k} &= \sum^{i}C_{y,k,i} + obsS_{y,k}\\
-  obsER_{y,k} &= \frac{\sum^{i}C_{y,k,i}}{obsRY_{y,k}}
+  obsRY_{y,k} &= \sum^{i}obsC_{y,k,i} + obsS_{y,k}\\
+  obsER_{y,k} &= \frac{\sum^{i}obsC_{y,k,i}}{obsRY_{y,k}}
   (\#eq:obsRY)
 \end{align}
 
 
 #### Assessment submodel
 
-This next phase of the projecton loop simulates salmon stock assessment analysis. The linearized simple Ricker stock recruit curve is fit to the observed data.
+This next phase of the projecton loop simulates salmon stock assessment analysis. The linearized simple Ricker stock recruit curve is fit to the observed data and $\hat{a_{y,k}}$ and $\hat{b_{y,k}}$ are estimated.
 
 \begin{align}
-  obslogRS_{1:y,k} &= esta_{y,k}-estb_{y,k} \cdot  obsS_{y,k}\\
+  obslogRS_{1:y,k} &= \hat{a_{y,k}}-\hat{b_{y,k}} \cdot  obsS_{y,k}\\
   (\#eq:obslogRS)
 \end{align}
 
+At this point, the management benchmarks could be re-estimted based on the observed data and estimated parameters. The LRP study cases, however, set the management bechmarks to the normative period, and for this reason the management benchmarks are kept constant and equal to the management benchmark at the last year of the priming period.  
 Management benchmarks are then estimated 
 
+<!--
 describe percentiles true and observed
 
 Describe SR obs BM
@@ -422,25 +423,24 @@ same as prime loop but with observed qquantities
 If the stock recruitment management benchmarks cannot be estimated, they are set to the previous estimated value. 
 
 Make a note that the habitat benchmarks are not defined here. 
-
+-->
 
 
 #### Population Dynamics submodel again
 
 
-Generic recovery simulator loop 3
 
 get marine survival estimates -- same across CUs
 
 add error to proportion at ages. vary among CUmor consatant across cu 
 
-Adjust productivity parameter for the skew option, i.e. draw recruitment error from a skewed multivariate normal or student t distribution. 
+Adjust productivity parameter for the skew option, i.e. draw recruitment error from a skewed multivariate normal or student t distribution. with correlation among CUs
 
 Generate recruitment recBY
 
 check for extinction if R < threshold
 
-estimate true benchmarks -- all rely on refalpha anf beta defined  by the user. 
+estimate true upper and lower benchmarks -- all rely on refalpha anf beta defined  by the user. 
 
-end of loop 3 
+ 
 
